Bug 409915 - Dolphin shows an error message when I enable auto-mounting in "Removable devices" kcm while a removable device is already mounted
Summary: Dolphin shows an error message when I enable auto-mounting in "Removable devi...
Status: RESOLVED FIXED
Alias: None
Product: frameworks-solid
Classification: Frameworks and Libraries
Component: general (other bugs)
Version First Reported In: 5.60.0
Platform: Arch Linux Linux
: NOR normal
Target Milestone: ---
Assignee: Lukáš Tinkl
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2019-07-17 19:44 UTC by Patrick Silva
Modified: 2019-07-19 10:28 UTC (History)
2 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 5.17
Sentry Crash Report:


Attachments
screenshot (29.23 KB, image/png)
2019-07-17 19:44 UTC, Patrick Silva
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Patrick Silva 2019-07-17 19:44:56 UTC
Created attachment 121591 [details]
screenshot

STEPS TO REPRODUCE
1. right click on the device notifier in system tray, select "Configure removable devices"
2. make sure "enable automatic mounting of removable media" option is unchecked.
If so, go to step 3. Otherwise, uncheck it, click "Ok" button, reboot your computer and start a new Plasma session
3. connect a storage device (I used a pendrive) to usb port or insert a CD/DVD/BD
4. open Dolphin
5. mount your removable device by clicking on its entry under "Removable devices" in the places panel 
6. right click on the device notifier in system tray, select "Configure removable devices"
7. check "enable automatic mounting of removable media" option and click "Apply" button

OBSERVED RESULT
As we can see in the attached screenshot, Dolphin shows an error message
saying that your removable device is already mounted.
Furthermore, the popup of the device notifier shows up.

EXPECTED RESULT
no error message, the popup of the device notifier does not show up.

SOFTWARE/OS VERSIONS
Operating System: Arch Linux 
KDE Plasma Version: 5.16.3
KDE Frameworks Version: 5.60.0
Qt Version: 5.13.0
Comment 1 Méven Car 2019-07-19 09:51:25 UTC
I could reproduce it with a local removable filesystem already mounted.
Although rebooting and logging out when changing "enable automatic mounting of removable media" was not necessary.

The kded automounter should not try to mount an already mounted device.

Diff at:
https://phabricator.kde.org/D22552
Comment 2 Méven Car 2019-07-19 10:28:15 UTC
Git commit a46bff2975245b65971954fe733fd5bb0d9ea404 by Méven Car.
Committed on 19/07/2019 at 10:28.
Pushed by meven into branch 'master'.

Avoid attempting to auto-mount a device when it is alread mounted

Summary:
FIXED-IN: 5.17

Reviewers: #plasma, ngraham, broulik

Reviewed By: #plasma, broulik

Subscribers: plasma-devel

Tags: #plasma

Differential Revision: https://phabricator.kde.org/D22552

M  +1    -1    solid-device-automounter/kded/DeviceAutomounter.cpp

https://commits.kde.org/plasma-desktop/a46bff2975245b65971954fe733fd5bb0d9ea404