Avoid attempting to auto-mount a device when it is alread mounted

Summary:
BUG: 409915
FIXED-IN: 5.17

Reviewers: #plasma, ngraham, broulik

Reviewed By: #plasma, broulik

Subscribers: plasma-devel

Tags: #plasma

Differential Revision: https://phabricator.kde.org/D22552